--- a/app/src/main/res/layout/bus_layout.xml
+++ b/app/src/main/res/layout/bus_layout.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginLeft="1dp"
-    android:layout_marginRight="1dp"
+    android:layout_marginLeft="0dp"
+    android:layout_marginRight="0dp"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -16,7 +16,7 @@
         tools:srcCompat="@drawable/logo" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/BusName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="168dp"
@@ -28,15 +28,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/Time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="28dp"
         android:text="Timing"
         android:textColor="#000000"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintStart_toStartOf="@+id/BusName"
+        app:layout_constraintTop_toBottomOf="@+id/BusName" />
 
     <TextView
         android:id="@+id/textView9"
@@ -46,17 +46,27 @@
         android:layout_marginTop="16dp"
         android:text="Available Seats"
         android:textColor="#000000"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintStart_toEndOf="@+id/BusName"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/SeatAvailability"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="28dp"
         android:text="0/0"
         android:textColor="#000000"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintStart_toEndOf="@+id/Time"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <TextView
+        android:id="@+id/BusNo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:text="BusNo"
+        android:textColor="#000000"
+        app:layout_constraintStart_toStartOf="@+id/BusName"
+        app:layout_constraintTop_toBottomOf="@+id/BusName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
