--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,22 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
-
-    <Button
-        android:id="@+id/sign_in"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="368dp"
-        android:layout_marginEnd="224dp"
-        android:drawableLeft="@drawable/common_google_signin_btn_icon_dark"
-        android:text="Sign In"
-        app:cornerRadius="10dp"
-        app:iconTint="#F3EFEF"
-        app:iconTintMode="src_in"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
@@ -33,14 +19,39 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/sign_in"
+
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="348dp"
+        android:background="@drawable/transparent_bg_bordered_button"
+
+        android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+
+        android:text="Sign-In"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/sign_out"
-        android:layout_width="122dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="48dp"
-        android:text="Signout"
-        app:cornerRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="@+id/sign_in"
-        app:layout_constraintStart_toEndOf="@+id/sign_in" />
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="70dp"
+        android:background="@drawable/transparent_bg_bordered_button"
+        android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
+
+        android:text="Sign-Out"
+
+        android:textColor="@color/light_blue_600"
+        android:textSize="16dp"
+
+        app:layout_constraintStart_toEndOf="@+id/sign_in"
+        app:layout_constraintTop_toTopOf="@+id/sign_in" />
 
     <Button
         android:id="@+id/cur_user"
@@ -50,7 +61,8 @@
         android:layout_marginEnd="212dp"
         android:text="Get current User"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+         />
 
     <ImageView
         android:id="@+id/imageView"
@@ -61,4 +73,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
